feat(frontend): Create basic app layout; test(frontend): Write a couple basic tests for footer component

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
 </head>
 
 <body>
-	<app-root></app-root>
+	<bb-root></bb-root>
 	<noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 
