test(frontend): Fix broken tests in app component; chore(core): Prep v0.5.0

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
 </head>
 
 <body>
-	<bb-root></bb-root>
+	<bb-app></bb-app>
 	<noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 
